fix: add missing padding under dropdown helptexts

--- a/packages/css/src/formElements/autocomplete/autocomplete.css
+++ b/packages/css/src/formElements/autocomplete/autocomplete.css
@@ -125,6 +125,7 @@
 
 .md-autocomplete__help-text--open {
   padding-top: 0.5em;
+  padding-bottom: 0.5em;
   max-height: 2000px;
   transition: max-height 0.5s ease-in;
 }
