--- a/packages/css/src/formElements/select/select.css
+++ b/packages/css/src/formElements/select/select.css
@@ -103,6 +103,7 @@
 
 .md-select__help-text--open {
   padding-top: 0.5em;
+  padding-bottom: 0.5em;
   max-height: 2000px;
   transition: max-height 0.5s ease-in;
 }
